# gns3-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  release-please-config.json
.claude-plugin/: marketplace.json
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml  release-please.yml
plugin/: .mcp.json
plugin/.claude-plugin/: plugin.json
plugin/commands/: gns3-lab.md
src/gns3_mcp/: __init__.py  __main__.py  client.py  config.py  console.py  errors.py  resources.py  runtime.py  server.py
src/gns3_mcp/tools/: __init__.py  _common.py  access.py  appliances.py  capture.py  computes.py  console.py  controller.py  drawings.py  images.py  links.py  nodes.py  pools.py  projects.py  snapshots.py  templates.py
tests/: test_client.py  test_console.py  test_live_smoke.py  test_tools_integration.py
