[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gns3-mcp"
version = "0.1.0"
description = "Full-feature MCP server for the GNS3 v3 (3.0) controller REST API, with device console automation."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Oscar" }]
keywords = ["gns3", "mcp", "model-context-protocol", "networking", "automation"]
dependencies = [
    "fastmcp>=2.11,<3",
    "httpx>=0.27",
    "websockets>=12",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
]

[project.urls]
Homepage = "https://github.com/Olaw2jr/gns3-mcp"
Repository = "https://github.com/Olaw2jr/gns3-mcp"
Issues = "https://github.com/Olaw2jr/gns3-mcp/issues"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "respx>=0.23.1", "anyio>=4"]

[project.scripts]
gns3-mcp = "gns3_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gns3_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
